# amd-sev-snp-attestation-sdk

contracts/src/interfaces/: ISnpAttestation.sol
crates/prover/src/: program_sp1.rs  prover.rs
crates/sev-snp/examples/: attestation.rs
crates/snp-attest-cli/: Cargo.toml
crates/snp-attest-cli/src/: utils.rs
crates/sp1-methods/sp1-verifier/: Cargo.toml
crates/sp1-methods/sp1-verifier/src/: main.rs
crates/verifier/: Cargo.toml
crates/verifier/src/: attestation.rs  lib.rs  measurement.rs  storage.rs  verify.rs
